syntax = "proto3";
package wormhole_foundation.wormchain.wormhole;

option go_package = "github.com/wormhole-foundation/wormchain/x/wormhole/types";

message GuardianValidator {
  bytes guardianKey = 1;
  bytes validatorAddr = 2;
  
}

